--- a/style.css
+++ b/style.css
@@ -113,10 +113,6 @@
     color: #878787;
 }
 
-body {
-    background-color: #f1f3f6;
-}
-
 .subFooterone>p {
     color: #878787;
     font-size: 13px;
@@ -185,13 +181,15 @@ body {
 }
 
 body{
-    background-color:white !important;  
+    background-color:#f1f3f6 !important;  
     color:black !important
 }
 .mydark{
     background-color:black !important;
     color:white !important;
 }
+
+
 
 
 
