--- a/style.css
+++ b/style.css
@@ -192,7 +192,12 @@ body{
     opacity: 0.4;
 }
 
-
+.weatherimg{
+    height:40px;
+    width: 40px;
+    margin-right: 10px;
+    margin-left: 30px;
+}
 
 
 
